demos/mlops-pins-fleet/configuration/etc/microshift/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pins-opendemo-service
spec:
  selector:
    app: pins-opendemo
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30000
  type: NodePort
