demos/mlops-pins-fleet/configuration/etc/microshift/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pins-opendemo-service
  namespace: pins-opendemo
spec:
  host: pins-redhat.local
  port:
    targetPort: 5000
  to:
    kind: Service
    name: pins-opendemo-service
    weight: 100
  wildcardPolicy: None
